refactor: 특정 요일에 대한 세팅만 추출해서 머지하도록 수정
예약 조건 검증 시, 요일에 대한 '실질적' 세팅 객체를 만들어서 검증